--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="section">
 {% block page_content %}
-<div class="page-header">
+<div class="page-header" style="margin-left: 10px;">
     <h2>Home</h2>
     <div id="nav-bottomright">
         <form name="input" class="form-horizontal" id="searchTags" method="post">
