--- a/app/templates/tagged_posts.html
+++ b/app/templates/tagged_posts.html
@@ -5,11 +5,10 @@
 {% block title %}Intranet - Results{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="page-header" style="margin-left: 10px;">
     <h2>Search Results</h2>
 </div>
 <div id="page-body">
 {% include '_posts.html' %}
 </div>
-
 {% endblock %}
