--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -3,7 +3,7 @@
     <h1>{{ post[1] }}</h1>
     <h10>{{ post[2] }}</h10>
     <br>
-    <h13>Posted by {{ post[6].username }}</h13>
+    <h13>Posted by {{ post[6] }}</h13>
     <div class="well">{{ post[3] | safe }}</div>
     <div class="post-footer">
         <a href="{{ url_for('.post', id=post[0]) }}">
